<?xml version="1.0"?>
<package>
  <name>lu4r_ros</name>

  <version>0.0.1</version>

  <description>Package to interface LU4R to ROS</description>

  <maintainer email="me@maximest-pierre.me">Maxime St-Pierre</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
  </export>
</package>
